[gd_scene load_steps=6 format=3]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1_script"]
[ext_resource type="PackedScene" path="res://scenes/inventory/inventory.tscn" id="2_inventory"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0.1, 0.1, 0.1, 0.8)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hp"]
bg_color = Color(0.8, 0.2, 0.2, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_armor"]
bg_color = Color(0.2, 0.4, 0.8, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_script")

[node name="RightBottom" type="MarginContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -100.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="RightBottom"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="AmmoLabel" type="Label" parent="RightBottom/VBoxContainer"]
layout_mode = 2
text = "Ammo: 30/90"
horizontal_alignment = 2

[node name="ArmorBar" type="ProgressBar" parent="RightBottom/VBoxContainer"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_armor")
value = 50.0
show_percentage = false

[node name="Label" type="Label" parent="RightBottom/VBoxContainer/ArmorBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Armor"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="RightBottom/VBoxContainer"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_hp")
value = 100.0
show_percentage = false

[node name="Label" type="Label" parent="RightBottom/VBoxContainer/HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "HP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BottomCenter" type="MarginContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -125.0
offset_top = -100.0
offset_right = 125.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="BottomCenter"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="MeleeSlot" type="PanelContainer" parent="BottomCenter/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="Icon" type="TextureRect" parent="BottomCenter/HBoxContainer/MeleeSlot"]
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="BottomCenter/HBoxContainer/MeleeSlot"]
layout_mode = 2
size_flags_vertical = 1
text = "1"

[node name="PistolSlot" type="PanelContainer" parent="BottomCenter/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="Icon" type="TextureRect" parent="BottomCenter/HBoxContainer/PistolSlot"]
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="BottomCenter/HBoxContainer/PistolSlot"]
layout_mode = 2
size_flags_vertical = 1
text = "2"

[node name="RifleSlot" type="PanelContainer" parent="BottomCenter/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="Icon" type="TextureRect" parent="BottomCenter/HBoxContainer/RifleSlot"]
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="BottomCenter/HBoxContainer/RifleSlot"]
layout_mode = 2
size_flags_vertical = 1
text = "3"

[node name="InventoryLayer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Inventory" parent="InventoryLayer" instance=ExtResource("2_inventory")]
visible = false
layout_mode = 1
